--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,8 +7,8 @@
         {
             "type": "pwa-chrome",
             "request": "launch",
-            "name": "Open Juvefc.html",
-            "file": "c:\\Users\\Dell\\Desktop\\Juventus\\Juvefc.html"
+            "name": "Open index.html",
+            "file": "c:\\Users\\Dell\\Desktop\\Juventus\\index.html"
         }
     ]
 }
